--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "server",
+  "name": "chargebuddy",
   "version": "1.0.0",
   "description": "back-end for ChargeBuddy",
+  "engines": {
+    "node": "16.14.2"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Eric Winkelspecht",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
