--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,13 @@
   "proxy": "http://localhost:8080/",
   "dependencies": {
     "@react-google-maps/api": "^2.12.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "use-places-autocomplete": "^4.0.0",
-    "web-vitals": "^2.1.4"
+    "use-places-autocomplete": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
