--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "chargespace",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080/",
+  "proxy": "https://charge-buddy-api.herokuapp.com/",
   "dependencies": {
     "@react-google-maps/api": "^2.12.0",
     "axios": "^0.27.2",
